Release Note

* 6/1/2014
  * added eventService to JEDI_Tasks

* 5/30/2014
  * added plugins for general purpose
  * fixed job_retry_history

* 5/27/2014
  * added multiple attempts to ctl script

* 5/26/2014
  * changed error level of import failure in FactoryBase

* 5/21/2014
  * changed ATLAS anal brokerage to use CVMFS check for nightlies
  * added addEventServiceTask.py

* 5/13/2014
  * added reassignTask

* 5/8/2014
  * added a build number to version name

* 5/6/2014
  * fixed for t_task.total_events

* 4/29/2014
  * use startEvent and endEvent of files for event service

* 4/23/2014
  * changed CC to allow nEventsPerInputFile

* 4/21/2014
  * initializing nevents, total_req_jobs and metadata

* 4/17/2014
  * introduced toabort
  * fixed pp to set failed to datasets for failed tasks

* 4/14/2014
  * fixed for task broker

* 4/9/2014
  * added AtlasAnalWatchDog
  * improved log in AtlasProdJobBroker
  * added randomSleep to all workers

* 4/7/2014
  * fixed RucioFC lookup
  * fixed to set higher priorities to pmerge
  * fixed to use proper currentPriority in AtlasAnalJobBroker
  * changed to reuse lib.tgz in analysis
  * fixed splitter for merging
  * changed AtlasAnalJobBroker to take throttled jobs into account

* 3/25/2014
  * fixed to avoid duplicated usage of premerged datasets
  * fixed to set status=scouting even if scout jobs run on multiple datasets

* 3/20/2014
  * changed xrd to fax

* 3/19/2014
  * chaned to set t_task.start_time

* 3/15/2014
  * chaned to propagate aborted to DEFT

* 3/14/2014
  * changed to set parent_tid=taskid when no parent
  * changed the initial task status to waiting from submit
  * chaned to propagate more task status to DEFT
  * reset splitRule when waiting for parent

* 3/12/2014
  * fixed notification for merge

* 3/10/2014
  * improved ATLAS job brokerage for --site=A,B,C,AUTO
  * added a mechanism for task chain
  * fixed JEDI email notification to show process and dataset summary

* 3/7/2014